--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   http: ^1.2.1 # Added for making HTTP requests
   image_picker: ^1.1.2
+  http_parser: ^4.0.2
+  flutter_secure_storage: ^9.0.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
